# PortfolioOrch_QuantDevs

./: .gitignore  README.md  main.py  pyproject.toml
data/: market_data.csv  stock_universe.csv  updated_stock_universe.csv
src/: ai_optimizer.py  engine.py  equity.py  fetcher.py  fundamentals.py  optimizer.py  simulator.py  verifier.py  visualizer.py
