[project]
name = "cbsfinancechallenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "groq>=1.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pyportfolioopt>=1.5.6",
    "rich>=14.3.2",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "typer>=0.23.1",
    "yfinance>=1.1.0",
]
